# MapViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/config/: object_palette.json  settings.json
assets/samples/: location_log_sample.csv
docs/: integration_scenarios.md
src/: main.cpp  mapviewer.sln
src/core/: MainModule.cpp  MainModule.h  MessageBus.cpp  MessageBus.h  Messages.h  ModuleBase.cpp  ModuleBase.h  SessionId.cpp  SessionId.h
src/geo/: BoundingBox.h  CoordTransform.cpp  CoordTransform.h  Picking.cpp  Picking.h
src/modules/config/: ConfigModule.cpp  ConfigModule.h
src/modules/data/: DataModule.cpp  DataModule.h
src/modules/input/: InputModule.cpp  InputModule.h
src/modules/locationlog/: LocationLogModule.cpp  LocationLogModule.h
src/modules/log/: LogModule.cpp  LogModule.h
src/modules/object/: ObjectModule.cpp  ObjectModule.h
src/modules/render/: RenderModule.cpp  RenderModule.h
src/modules/sound/: SoundModule.cpp  SoundModule.h
src/modules/state/: StateModule.cpp  StateModule.h
src/modules/tts/: TtsModule.cpp  TtsModule.h
src/modules/ui/: UiModule.cpp  UiModule.h
src/render/: Camera.h
src/render/opengl/: GLContext.cpp  GLContext.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h
tests/: calc_sujeong.cpp  test_coord.cpp  test_messagebus.cpp  test_picking.cpp
